tests/tests/snapshots/ts_client__audited-crud.snap
---
source: tests/tests/ts_client.rs
expression: dump
---
============================================================
clients/ts/package.json
============================================================
{
  "name": "audited-system-client",
  "version": "0.1.0",
  "private": true,
  "type": "module",
  "main": "src/index.ts",
  "types": "src/index.ts",
  "scripts": {
    "typecheck": "tsc --noEmit"
  },
  "devDependencies": {
    "typescript": "^5.4.0"
  }
}
============================================================
clients/ts/tsconfig.json
============================================================
{
  "compilerOptions": {
    "target": "ES2020",
    "module": "ESNext",
    "moduleResolution": "bundler",
    "strict": true,
    "declaration": true,
    "outDir": "dist",
    "rootDir": "src",
    "lib": ["ES2020", "DOM"]
  },
  "include": ["src"]
}
============================================================
clients/ts/src/types.ts
============================================================
// Generated by CIaC. Record and CRUD schemas from the program's IR.

/** Every `api` route wraps its pipeline's result in this envelope. */
export interface Envelope<T> {
  status: string;
  data: T;
}

export interface AuditEvent {
  id: string;
  title: string;
}

export interface ResourceUserIn {
  title: string;
}

export interface ResourceUserOut {
  id: string;
  title: string;
}

export interface ResourceVideoIn {
  title: string;
}

export interface ResourceVideoOut {
  id: string;
  title: string;
}

export interface User {
  id: string;
  title: string;
}

export interface Video {
  id: string;
  title: string;
}

============================================================
clients/ts/src/client.ts
============================================================
// Generated by CIaC. One function per route; scope-bearing routes
// require `AuthenticatedClientOptions` so a missing token is a
// compile error, not a 401 at runtime.
import type * as Types from "./types";

export interface ClientOptions {
  baseUrl: string;
}

export interface AuthenticatedClientOptions extends ClientOptions {
  token: string;
}

function authHeader(opts: ClientOptions): Record<string, string> {
  const token = (opts as Partial<AuthenticatedClientOptions>).token;
  return token ? { Authorization: `Bearer ${token}` } : {};
}

async function request<T>(
  opts: ClientOptions,
  path: string,
  method: string,
  body?: unknown,
): Promise<T> {
  const headers: Record<string, string> = { ...authHeader(opts) };
  if (body !== undefined) {
    headers["Content-Type"] = "application/json";
  }
  const res = await fetch(`${opts.baseUrl}${path}`, {
    method,
    headers,
    body: body === undefined ? undefined : JSON.stringify(body),
  });
  if (!res.ok) {
    throw new Error(`${method} ${path} failed: ${res.status}`);
  }
  if (res.status === 204) {
    return undefined as T;
  }
  return (await res.json()) as T;
}

export async function catalogCreateResourceVideo(opts: ClientOptions, payload: Types.ResourceVideoIn): Promise<Types.ResourceVideoOut> {
  return request(opts, "/resource_videos", "POST", payload);
}

export async function catalogListResourceVideos(opts: ClientOptions, params?: { limit?: number; offset?: number }): Promise<Types.ResourceVideoOut[]> {
  const q = new URLSearchParams();
  if (params?.limit !== undefined) q.set("limit", String(params.limit));
  if (params?.offset !== undefined) q.set("offset", String(params.offset));
  const qs = q.toString();
  return request(opts, qs ? `/resource_videos?${qs}` : "/resource_videos", "GET");
}

export async function catalogGetResourceVideo(opts: ClientOptions, id: string): Promise<Types.ResourceVideoOut> {
  return request(opts, `/resource_videos/{}`.replace("{}", encodeURIComponent(id)), "GET");
}

export async function catalogUpdateResourceVideo(opts: ClientOptions, id: string, payload: Types.ResourceVideoIn): Promise<Types.ResourceVideoOut> {
  return request(opts, `/resource_videos/{}`.replace("{}", encodeURIComponent(id)), "PUT", payload);
}

export async function catalogDeleteResourceVideo(opts: ClientOptions, id: string): Promise<void> {
  return request(opts, `/resource_videos/{}`.replace("{}", encodeURIComponent(id)), "DELETE");
}

export async function accountsCreateResourceUser(opts: ClientOptions, payload: Types.ResourceUserIn): Promise<Types.ResourceUserOut> {
  return request(opts, "/resource_users", "POST", payload);
}

export async function accountsListResourceUsers(opts: ClientOptions, params?: { limit?: number; offset?: number }): Promise<Types.ResourceUserOut[]> {
  const q = new URLSearchParams();
  if (params?.limit !== undefined) q.set("limit", String(params.limit));
  if (params?.offset !== undefined) q.set("offset", String(params.offset));
  const qs = q.toString();
  return request(opts, qs ? `/resource_users?${qs}` : "/resource_users", "GET");
}

export async function accountsGetResourceUser(opts: ClientOptions, id: string): Promise<Types.ResourceUserOut> {
  return request(opts, `/resource_users/{}`.replace("{}", encodeURIComponent(id)), "GET");
}

export async function accountsUpdateResourceUser(opts: ClientOptions, id: string, payload: Types.ResourceUserIn): Promise<Types.ResourceUserOut> {
  return request(opts, `/resource_users/{}`.replace("{}", encodeURIComponent(id)), "PUT", payload);
}

export async function accountsDeleteResourceUser(opts: ClientOptions, id: string): Promise<void> {
  return request(opts, `/resource_users/{}`.replace("{}", encodeURIComponent(id)), "DELETE");
}

============================================================
clients/ts/src/index.ts
============================================================
export * from "./types";
export * from "./client";
============================================================
clients/ts/README.md
============================================================
# Generated TypeScript client

Dependency-free (uses the global `fetch`) — generated by `ciac build
--client ts` straight from the program's IR, the same source every
backend renders from. Routes that require auth take
`AuthenticatedClientOptions` instead of `ClientOptions`, so a missing
token is a compile error rather than a 401 at runtime.

```ts
import { createNote, type NoteIn } from "./src";

const opts = { baseUrl: "http://localhost:8000", token: "..." };
const note = await createNote(opts, { title: "hi" } satisfies NoteIn);
```

Run `npm run typecheck` (after `npm install`) to type-check the
package on its own.
